--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,7 @@ body {
     margin: 0; 
     font-family: Roboto, "Helvetica Neue", sans-serif; 
     overflow: hidden;
+    background-color: var(--background-color);
 }
 
 
